--- a/index.html
+++ b/index.html
@@ -96,7 +96,16 @@
     </section>
 
     <div class="story__pictures">
-      Story pictures
+      <img
+        src="img/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__img--1"
+      />
+      <img
+        src="img/story-2.jpeg"
+        alt="Couple with new house"
+        class="story__img--1"
+      />
     </div>
 
     <div class="story__content">
