--- a/index.html
+++ b/index.html
@@ -101,11 +101,7 @@
         alt="Couple with new house"
         class="story__img--1"
       />
-      <img
-        src="img/story-2.jpeg"
-        alt="Couple with new house"
-        class="story__img--1"
-      />
+      <img src="img/story-2.jpeg" alt="New house" class="story__img--2" />
     </div>
 
     <div class="story__content">
